app/svc-cpu-mem-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpu-mem-demo
  namespace: thesis
  labels:
    app: cpu-mem-demo
spec:
  type: LoadBalancer
  ports:
    - name: http 
      port: 8000
      targetPort: 8000
  selector:
    app: cpu-mem-demo
