app/cpu-mem-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpu-mem-demo
  namespace: thesis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx         
  rules:
    - host: app.thesis.local  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cpu-mem-demo
                port:
                  number: 80
